Revision history for ToolSet

0.13 in progress
    - made pod/pod_coverage author tests skip by default

0.12 Sun Dec  4 23:45:35 EST 2005
    - fixed Build.PL generation of Makefile.PL

0.11 Tue Oct 25 06:42:25 EDT 2005
    - adds support for @EXPORT to list functions that ToolSet 
      will export by default

0.10 Sat Oct 22 17:14:21 EDT 2005
    - set_strict() added
    - set_warnings() added
    - export() added
    - sample ToolSet::SWC added