@@ -1,12 +1,14 @@
 use Test::More;
 plan skip_all => "Skipping author tests" if not $ENV{AUTHOR_TESTING};
 
-eval "use Test::Pod::Coverage 1.08";
-plan skip_all => "Test::Pod::Coverage 1.08 required for testing POD coverage"
+my $min_tpc = 1.08;
+eval "use Test::Pod::Coverage $min_tpc";
+plan skip_all => "Test::Pod::Coverage $min_tpc required for testing POD coverage"
     if $@;
 
-eval "use Pod::Coverage 0.17";
-plan skip_all => "Pod::Coverage 0.17 required for testing POD coverage"
+my $min_pc = 0.17;
+eval "use Pod::Coverage $min_pc";
+plan skip_all => "Pod::Coverage $min_pc required for testing POD coverage"
     if $@;
 
 all_pod_coverage_ok();
