@@ -2,6 +2,7 @@ Revision history for ToolSet
 
 0.13 in progress
     - made pod/pod_coverage author tests skip by default
+    - moved build_requires to build for better CPANPLUS compatibility
 
 0.12 Sun Dec  4 23:45:35 EST 2005
     - fixed Build.PL generation of Makefile.PL
